--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "jwt-decode": "^3.1.2",
     "sass": "^1.67.0",
     "vue": "^2.5.2",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
